--- a/src/html/index.html
+++ b/src/html/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <div id="react-container"></div>
-    <script src="../index.js"></script>
+    <script type="module" src="../index.js"></script>
 </body>
 </html>
